--- a/content/en/documents.html
+++ b/content/en/documents.html
@@ -196,6 +196,51 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E7A. Horizontal components for data spaces (v2)</h2>
+                            <p class="card-text">Description of the development and evolution of the private cloud platform for data space deployment, described and presented in deliverable E5.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E7A%20Componentes%20horizontales%20para%20espacios%20de%20datos%20v2.pdf">Link</a>  (Spanish version)</div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E11. Final version of cloud and edge services for knowledge graph generation</h2>
+                            <p class="card-text">Final version of services oriented towards knowledge graph generation through declarative rules. These services provide a flexible and scalable tool that allows maximizing the diversity of data to generate knowledge graphs that facilitate analysis, understanding, and decision-making.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E11.%20Version%20final%20de%20servicios%20en%20cloud%20y%20edge%20de%20generacion%20de%20grafos%20de%20conocimiento.pdf">Link</a>  (Spanish version)</div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E13. Final version of natural language processing services</h2>
+                            <p class="card-text">Final version of services described in E12.</p>
+                            <ul>
+                                <li>Services for enriching language models with knowledge graphs.</li>
+                                <li>Creation of a linguistic data space.</li>
+                                <li>Data space and knowledge services for the legal sector and public procurement.</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E13.%20Version%20final%20(micro)servicios%20para%20el%20procesamiento%20lenguaje%20natural.pdf">Link</a>   (Spanish version)</div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E15. Final version of cloud services for large-scale multimodal and multimedia analysis</h2>
+                            <p class="card-text">Final version of multimodal microservices proposed in the digital media data space presented in E14.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E15.%20Version%20final%20de%20microservicios%20en%20cloud%20de%20analisis%20a%20gran%20escala%20multimedia.pdf">Link</a>   (Spanish version)</div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
