--- a/content/es/documentos.html
+++ b/content/es/documentos.html
@@ -117,7 +117,7 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title" style="text-align: left;">E5. Componentes horizontales para espacios de datos</h2>
+                            <h2 class="card-title" style="text-align: left;">E5. Componentes horizontales para espacios de datos (v1)</h2>
                             <p class="card-text">Visión integral del proyecto que aborda sus casos de uso, la arquitectura tecnológica y los servicios de IA para la gestión de datos. Detalla la infraestructura en la nube, los mecanismos de autenticación, la interoperabilidad y los servicios de auditoría, proporcionando un marco sólido para el intercambio eficiente de datos entre organizaciones.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E5.Componentes%20horizontales%20para%20espacios%20de%20datos.pdf">Enlace</a></div>
@@ -127,7 +127,7 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title" style="text-align: left;">E6. <em>Handbook</em> v2</h2>
+                            <h2 class="card-title" style="text-align: left;">E6. <em>Handbook</em> (v2)</h2>
                             <p class="card-text">Guía práctica del proyecto que, en esta edición, se centra en la gobernanza de los espacios de datos, incorporando tres anexos fundamentales: 
                             </p>
                             <ul>
@@ -190,10 +190,55 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title" style="text-align: left;">E17. Informe de diseminación V2</h2>
+                            <h2 class="card-title" style="text-align: left;">E17. Informe de diseminación (v2)</h2>
                             <p class="card-text">Documento que recoge las acciones de comunicación y diseminación realizadas por INESData, orientadas a consolidar una incubadora nacional de espacios de datos y servicios de inteligencia artificial basados en infraestructuras federadas <em>cloud-edge</em>.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E17.%20Informe%20de%20diseminacion%20v2.pdf">Enlace</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E7A. Componentes horizontales para espacios de datos (v2)</h2>
+                            <p class="card-text">Descripción del desarrollo y evolución de la plataforma cloud privada para despliegue de espacios de datos, descrita y presentada en el entregable E5.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E7A%20Componentes%20horizontales%20para%20espacios%20de%20datos%20v2.pdf">Enlace</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E11. Versión final de (micro)servicios en cloud y edge de generación de grafos de conocimientos</h2>
+                            <p class="card-text">Versión final de los servicios orientados a la generación de grafos de conocimiento mediante reglas declarativas. Estos servicios proporcionan una herramienta flexible y escalable que permite aprovechar al máximo la diversidad de datos para generar grafos de conocimiento que faciliten el análisis, la comprensión y la toma de decisiones.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E11.%20Version%20final%20de%20servicios%20en%20cloud%20y%20edge%20de%20generacion%20de%20grafos%20de%20conocimiento.pdf">Enlace</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E13. Versión final de servicios para el procesamiento lenguaje natural</h2>
+                            <p class="card-text">Versión final de los servicios descritos en E12.</p>
+                            <ul>
+                                <li>Servicios para el enriquecimiento de modelos de lenguaje con grafos de conocimiento.</li>
+                                <li>Creación de un espacio de datos lingüístico.</li>
+                                <li>Servicios de espacios de datos y conocimientos para el sector jurídico y contratación pública.</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E13.%20Version%20final%20(micro)servicios%20para%20el%20procesamiento%20lenguaje%20natural.pdf">Enlace</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E15. Versión final de servicios en <em>cloud</em> de análisis a gran escala multimodal y multimedia</h2>
+                            <p class="card-text">Versión final de los microservicios multimodales propuestos en el espacio de datos de medios digitales presentados en E14.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E15.%20Version%20final%20de%20microservicios%20en%20cloud%20de%20analisis%20a%20gran%20escala%20multimedia.pdf">Enlace</a></div>
                     </div>
                 </div>
                 
