update catalogo de recursos

--- a/content/es/catalogo_recursos.html
+++ b/content/es/catalogo_recursos.html
@@ -120,7 +120,32 @@
                     </tr>
                 </thead>
                 <tbody>
-                     <tr>
+                     
+                    <tr>
+                        <td>Modelos contractuales</td>
+                        <td>Documentación</td>
+                        <td>Modelos contractuales tipo definidos bajo el marco de gobernanza.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Documentos/INESData_Modelos%20contractuales%20tipo%20en%20Espacios%20de%20Datos.pdf">Ver más</a></td>
+                    </tr>
+                    <tr>
+                        <td>Definición de roles en la Gobernanza del Espacio de Datos</td>
+                        <td>Documentación</td>
+                        <td>Sistema de Gobernanza de un espacio de datos basado en roles.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Documentos/INESData_Definici%C3%B3n%20de%20roles%20en%20la%20gobernanza%20del%20Espacio%20de%20datos.pdf">Ver más</a></td>
+                    </tr>
+                    <tr>
+                        <td>Cumplimiento normativo</td>
+                        <td>Documentación</td>
+                        <td>Guía práctica sobre cumplimiento normativo en espacios de datos.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Documentos/INESData_Guia%20Practica%20sobre%20cumplimiento%20normativo%20en%20Espacio%20de%20Datos.pdf">Ver más</a></td>
+                    </tr>
+                    <tr>
                         <td>Conector INESData</td>
                         <td>Componente de Espacio de Datos</td>
                         <td>Basado en EDC, INESData Dataspace Connector implementa funcionalidades adicionales como la gestión y configuración de vocabularios, la implementeción de nuevos permisos, la persistencia local de datasets de manera sencilla, etc. Comprueba las nuevas funcionalidades en las últmas versiones del conector.</td>
